Introduce infix patterns